infra/security/mtls/istio-peer-authentication-strict.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: memoria-strict-mtls
  namespace: memoria
spec:
  mtls:
    mode: STRICT
