infra/security/mtls/istio-destination-rule-mtls.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: memoria-internal-mtls
  namespace: memoria
spec:
  host: "*.memoria.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
